--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\DataAccessLayer\packages.config" />
+  <repository path="..\Musiq\packages.config" />
   <repository path="..\OnSnap\packages.config" />
 </repositories>
