--- a/Musiq/Web.config
+++ b/Musiq/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="Musiq" connectionString="metadata=res://*/Entities.Musiq.csdl|res://*/Entities.Musiq.ssdl|res://*/Entities.Musiq.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=184.168.47.21;initial catalog=jukebox;persist security info=True;user id=juliogarcia93;password=ElGrullo10;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MusiqEntities" connectionString="metadata=res://*/Entities.Musiq.csdl|res://*/Entities.Musiq.ssdl|res://*/Entities.Musiq.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=184.168.47.21;initial catalog=jukebox;persist security info=True;user id=juliogarcia93;password=ElGrullo10;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="DefaultConnection" connectionString="Data Source=184.168.47.21;Initial Catalog=jukebox_accounts;User ID=juliogarcia93;Password=ElGrullo10; Integrated Security=False" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
