--- a/Musiq/Musiq.csproj
+++ b/Musiq/Musiq.csproj
@@ -189,6 +189,8 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\images\Koala.jpg" />
+    <Content Include="Content\images\Mainpage.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
