--- a/Musiq/Musiq.csproj
+++ b/Musiq/Musiq.csproj
@@ -249,6 +249,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Music\" />
     <Folder Include="Views\Music\" />
   </ItemGroup>
   <ItemGroup>
