--- a/Musiq/Musiq.csproj
+++ b/Musiq/Musiq.csproj
@@ -186,6 +186,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\AccountRepository.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Views\QueueController.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -197,6 +198,7 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Images\page-loader.gif" />
+    <Content Include="Scripts\angular-route.min.js" />
     <Content Include="Scripts\angular.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -246,11 +248,13 @@
     <Content Include="Views\Profile\Index.cshtml" />
     <Content Include="Views\Shared\_MusicPartial.cshtml" />
     <Content Include="Views\Shared\_ProfileModals.cshtml" />
+    <Content Include="Views\Shared\_QueuePartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Music\" />
     <Folder Include="Views\Music\" />
+    <Folder Include="Views\Queue\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
