--- a/Musiq/Musiq.csproj
+++ b/Musiq/Musiq.csproj
@@ -198,6 +198,7 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Images\page-loader.gif" />
+    <Content Include="Scripts\angular-local-storage.js" />
     <Content Include="Scripts\angular-route.min.js" />
     <Content Include="Scripts\angular.min.js" />
     <Content Include="Scripts\bootstrap.js" />
