--- a/Musiq/Web.config
+++ b/Musiq/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -18,15 +18,16 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="DefaultProfilePicURL" value="Images/profile.png"/>
+    <add key="DefaultProfilePicURL" value="Images/profile.png" />
   </appSettings>
   <system.web>
     <authentication mode="Forms">
       <forms loginUrl="/Home/Index"></forms>
     </authentication>
-    <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5.1" maxRequestLength="1048576" />
-    <customErrors mode="Off"/>
+    <compilation debug="true" />
+    <httpRuntime maxRequestLength="1048576" />
+    <customErrors mode="Off" />
+    <trust level="Full" />
   </system.web>
   <system.webServer>
     <modules>
@@ -64,7 +65,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
